plugins {
    id 'fabric-loom' version '1.1-SNAPSHOT'
    id 'maven-publish'

}

tasks.withType(JavaCompile) {
    options.release = 8
}

archivesBaseName = project.archives_base_name
version = "${project.mod_version}+MC${project.minecraft_version}"
group = project.maven_group

repositories {
    flatDir {
        dirs("libs")
    }
}


dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // atum implementation
    modImplementation(name: 'atum-1.1.3+1.15.2')

    // Using a compiled jar because the kaptainwutax libraries seem to be causing issues for jitpack and gradle
    include implementation(name: 'BeachFilter-1.0.1')
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

java {
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.archivesBaseName}" }
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
    repositories {
    }
}